--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" type="text/css" href="{% static 'portfolio/reset.css' %}" />
   <link rel="stylesheet" type="text/css" href="{% static 'portfolio/css/bootstrap.min.css' %}" />
   <link rel="stylesheet" type="text/css" href="{% static 'portfolio/css/spinners.css' %}" />
+  <link rel="stylesheet" type="text/css" href="{% static 'portfolio/css/swipebox.min.css' %}" />
   <link rel="stylesheet" type="text/css" href="{% static 'portfolio/style.css' %}" />
 
   <title>Kenta Portfolio</title>
@@ -14,6 +15,7 @@
   <script src="{% static 'portfolio/js/jquery-3.1.1.min.js' %}"></script>
   <script src="{% static 'portfolio/js/jquery.typist.js' %}"></script>
   <script src="{% static 'portfolio/js/index.js' %}"></script>
+  <script src="{% static 'portfolio/js/jquery.swipebox.min.js' %}"></script>
 
   <script>
   // スムーズスクロール部分の記述
