プラグイン関係のファイルをminにした

--- a/portfolio/templates/portfolio/engineer_work_detail.html
+++ b/portfolio/templates/portfolio/engineer_work_detail.html
@@ -6,13 +6,13 @@
   {% load static %}
   <link rel="stylesheet" type="text/css" href="{% static 'portfolio/reset.css' %}" />
   <link rel="stylesheet" type="text/css" href="{% static 'portfolio/css/bootstrap.min.css' %}" />
-  <link rel="stylesheet" type="text/css" href="{% static 'portfolio/css/spinners.css' %}" />
+  <link rel="stylesheet" type="text/css" href="{% static 'portfolio/css/spinners.min.css' %}" />
   <link rel="stylesheet" type="text/css" href="{% static 'portfolio/style.css' %}" />
 
   <title>{{ product.product_name }}</title>
 
   <script type="text/javascript" src="{% static 'portfolio/js/jquery-3.1.1.min.js' %}"></script>
-  <script type="text/javascript" src="{% static 'portfolio/js/jquery.typist.js' %}"></script>
+  <script type="text/javascript" src="{% static 'portfolio/js/jquery.typist.min.js' %}"></script>
   <script>
   var speed_define = 25;
   jQuery(function($) {
