--- a/portfolio/templates/error_base.html
+++ b/portfolio/templates/error_base.html
@@ -6,11 +6,10 @@
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'portfolio/reset.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'portfolio/css/bootstrap.min.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'portfolio/css/spinners.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'portfolio/style.css' %}" />
 
     <script type="text/javascript" src="{% static 'portfolio/js/jquery-3.1.1.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'portfolio/js/jquery.typist.js' %}"></script>
+    <script type="text/javascript" src="{% static 'portfolio/js/jquery.typist.min.js' %}"></script>
     <title>{% block title %}{% endblock %}</title>
     {% block script %}
     {% endblock %}
