Productにsort_idを追加した

--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -95,7 +95,7 @@
     <div class="section_title" id="engineer_title"></div>
 
     <div class="row">
-      {% for product in old_product_list %}
+      {% for product in product_list %}
       <div class="col-md-6">
         <a href="{% url 'portfolio:engineer_work_detail' product.pk %}">
         <figure>
