get()からfilter()を使ってNoneを返すようにして、テンプレで is not Noneを追加した

--- a/portfolio/templates/portfolio/engineer_work_detail.html
+++ b/portfolio/templates/portfolio/engineer_work_detail.html
@@ -34,7 +34,7 @@
         <div class="console_name">{{ product.product_name }}</div>
         <div class="console_name">{{ product.product_short_concept }}</div>
 
-        {% if image_file_list_not_contain_S3 %}
+        {% if image_file_list_not_contain_S3 is not None %}
         <div class="row">
           {% for image_file in image_file_list_not_contain_S3 %}
           <div class="col">
@@ -44,7 +44,7 @@
         </div>
         {% endif %}
 
-        {% if image_file_S3 %}
+        {% if image_file_S3 is not None %}
         <div class="container">
           <div class="console_image"><img class="img-fluid-no-border" src="/media/{{ image_file_S3.image }}"></div>
         </div>
