filter使用の方のif評価を間違えていたのでNoneへ修正

--- a/portfolio/templates/portfolio/engineer_work_detail.html
+++ b/portfolio/templates/portfolio/engineer_work_detail.html
@@ -44,7 +44,7 @@
         </div>
         {% endif %}
 
-        {% if image_file_S3.count is not None %}
+        {% if image_file_S3 is not None %}
         <div class="container">
           <div class="console_image"><img class="img-fluid-no-border" src="/media/{{ image_file_S3.image }}"></div>
         </div>
