未使用のsection idを削除

--- a/portfolio/templates/portfolio/engineer_work_detail.html
+++ b/portfolio/templates/portfolio/engineer_work_detail.html
@@ -24,7 +24,7 @@
   </script>
 </head>
 <body>
-  <section class="container" id="4">
+  <section class="container">
     <div class="section_title" id="e_work_title"></div>
 
     <div class="console_area">
