--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -80,18 +80,18 @@
 </head>
 
 <body>
-  <section class="cover" id="1">  <!--カバーページ-->
+  <section class="cover">  <!--カバーページ-->
     <div class="title_area">
       <div class="title" id="title"></div>
       <div class="sub_title" id="sub_title"></div>
     </div>
 
     <div class="arrow">
-      <a href="#2"><span></span><span></span><span></span>Scroll</a>
+      <a href="#1"><span></span><span></span><span></span>Scroll</a>
     </div>
   </section>
 
-  <section class="container" id="2">  <!--Engineer Works-->
+  <section class="container" id="1">  <!--Engineer Works-->
     <div class="section_title" id="engineer_title"></div>
 
     <div class="row">
@@ -124,7 +124,7 @@
     <!--</a>-->
   </section>
 
-  <section class="container" id="3">  <!--Photographer Works-->
+  <section class="container">  <!--Photographer Works-->
     <div class="section_title" id="photographer_title"></div>
 
     <div class="console_area">
@@ -172,7 +172,7 @@
     </div>
   </section>
 
-  <section class="container" id="4">  <!--Profile-->
+  <section class="container">  <!--Profile-->
     <div class="section_title" id="profile_title"></div>
 
     <div class="console_area">
