--- a/portfolio/templates/portfolio/engineer_work_detail.html
+++ b/portfolio/templates/portfolio/engineer_work_detail.html
@@ -20,6 +20,10 @@
       speed: speed_define - 10,
       text: 'Engineer Works'
     });
+    $('#reaction_title').typist({
+      speed: speed_define - 10,
+      text: 'Reaction'
+    });
   });
   </script>
 </head>
@@ -87,7 +91,7 @@
         {% endif %}
 
         <div class="console_text_link">
-          <a class="link" href="{% url 'portfolio:index' %}#2">
+          <a class="link" href="{% url 'portfolio:index' %}#1">
             <div class="box">
               <div class="link_name">Back</div>
               <div class="bd10 bd"><div class="bdT"></div><div class="bdB"></div><div class="bdR"></div><div class="bdL"></div></div>
@@ -95,6 +99,16 @@
           </a>
         </div>
 
+      </div>
+    </div>
+  </section>
+
+  <section class="container">
+    <div class="section_title" id="reaction_title"></div>
+    <div class="console_area">
+      <div class="console_top">Reaction to {{ engineer_product.engineer_product_alphabet_name }} process <span class="loading dots2"></span></div>
+
+      <div class="console">
       </div>
     </div>
   </section>
