photographerのwork countを動的に生成するようにした

--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -128,7 +128,7 @@
     <div class="section_title" id="photographer_title"></div>
 
     <div class="console_area">
-      <div class="console_top">Show 19 photographer works process <span class="loading dots2"></span></div>
+      <div class="console_top">Show {{ photographer_product_list.count|add:"3" }} photographer works process <span class="loading dots2"></span></div>
 
       <div class="console">
         <div class="console_text">使用カメラはNikon5300。</div>
