profileの画像名を変更

--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -182,7 +182,7 @@
         <div class="console_name">岩見建汰</div>
 
         <div class="container">
-          <div class="console_image"><img class="img-fluid-no-border" src="{% static 'portfolio/img/photo.png' %}"></div>
+          <div class="console_image"><img class="img-fluid-no-border" src="{% static 'portfolio/img/profile.png' %}"></div>
         </div>
 
         <div class="console_text">青森県八戸市出身。函館で大学院生をしています。</div>
