--- a/portfolio/templates/portfolio/engineer_work_detail.html
+++ b/portfolio/templates/portfolio/engineer_work_detail.html
@@ -117,9 +117,40 @@
     <div class="console_area">
       <div class="console_top">Reaction to {{ engineer_product.engineer_product_alphabet_name }} process <span class="loading dots2"></span></div>
         <div class="console">
+
+          {% if comment_list.count == 0 %}
+          <div class="console_text">No comment to {{ engineer_product.engineer_product_alphabet_name }}</div>
+          {% else %}
           {% for comment in comment_list %}
-          <div class="console_text_comment">{{ comment }}</div>
+          <div class="console_text_comment">{{ comment.comment_text }}</div>
           {% endfor %}
+          {% endif %}
+
+          <div class="console_text_comment">Now {{ engineer_product.votes }} goods</div>
+
+          <div class="row">
+            <div class="col">
+              <div class="console_text_link">
+              <a class="link" href="{% url 'portfolio:index' %}#1">
+                <div class="box">
+                  <div class="link_name">Good !</div>
+                  <div class="bd1 bd"><div class="bdT"></div><div class="bdB"></div><div class="bdR"></div><div class="bdL"></div></div>
+                 </div>
+              </a>
+              </div>
+            </div>
+
+            <div class="col">
+              <div class="console_text_link">
+              <a class="link" href="{% url 'portfolio:index' %}#1">
+                <div class="box">
+                  <div class="link_name">Comment</div>
+                  <div class="bd1 bd"><div class="bdT"></div><div class="bdB"></div><div class="bdR"></div><div class="bdL"></div></div>
+                 </div>
+              </a>
+              </div>
+            </div>
+          </div>
         </div>
     </div>
   </section>
