--- a/portfolio/templates/portfolio/engineer_work_detail.html
+++ b/portfolio/templates/portfolio/engineer_work_detail.html
@@ -126,6 +126,13 @@
           {% endfor %}
           {% endif %}
 
+          <form>
+            <div class="form-group">
+              <label for="Comment_textarea">Comment here</label>
+              <textarea class="form-control" id="Comment_textarea" rows="3"></textarea>
+            </div>
+          </form>
+
           <div class="console_text_comment">Now {{ engineer_product.votes }} goods</div>
 
           <div class="row">
