--- a/portfolio/static/portfolio/style.css
+++ b/portfolio/static/portfolio/style.css
@@ -385,6 +385,7 @@ div.console_text_comment:before {
 
 .console_text_link {
   text-align: center;
+  margin-bottom: 3vmin;
 }
 
 .console_text_no_before {
