--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -151,6 +151,20 @@
           {% endfor %}
         </div>
         {% endif %}
+
+        <div class="row">
+          <div class="col">
+            <div class="console_text_link">
+              <a class="link" href="https://www.facebook.com/kenta.iwami.5">
+                <div class="box">
+                  <div class="link_name">more</div>
+                  <div class="bd10 bd"><div class="bdT"></div><div class="bdB"></div><div class="bdR"></div><div class="bdL"></div></div>
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
   </section>
