--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -124,7 +124,7 @@
     <!--</a>-->
   </section>
 
-  <section class="container">  <!--Photographer Works-->
+  <section class="container" id="2">  <!--Photographer Works-->
     <div class="section_title" id="photographer_title"></div>
 
     <div class="console_area">
@@ -152,17 +152,14 @@
         </div>
         {% endif %}
 
-        <div class="row">
-          <div class="col">
-            <div class="console_text_link">
-              <a class="link" href="https://www.facebook.com/kenta.iwami.5">
-                <div class="box">
-                  <div class="link_name">more</div>
-                  <div class="bd10 bd"><div class="bdT"></div><div class="bdB"></div><div class="bdR"></div><div class="bdL"></div></div>
-                </div>
-              </a>
+
+        <div class="console_text_link">
+          <a class="link" href="{% url 'portfolio:photographer_all' %}">
+            <div class="box">
+              <div class="link_name">more</div>
+              <div class="bd10 bd"><div class="bdT"></div><div class="bdB"></div><div class="bdR"></div><div class="bdL"></div></div>
             </div>
-          </div>
+          </a>
         </div>
 
       </div>
