--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -176,7 +176,7 @@
         <div class="console_name">岩見建汰</div>
 
         <div class="container">
-          <div class="console_image"><img class="img-fluid-no-border" src="{% static 'portfolio/img/profile.png' %}"></div>
+          <div class="console_image"><img class="img-fluid-no-border" src="{% static 'portfolio/img/profile.jpg' %}"></div>
         </div>
 
         <div class="console_text">青森県八戸市出身。函館で大学院生をしています。</div>
@@ -184,7 +184,7 @@
         <div class="console_text">PBL(Project Based Learning)の振り返りに関して研究をしています。</div>
         <div class="console_text_no_before"></div>
         <div class="console_text">言語：C, Swift, Java, JavaScript, HTML, CSS, python</div>
-        <div class="console_text">資格：ITパスポート, 基本情報技術者試験, 応用情報技術者試験</div>
+        <div class="console_text">資格：応用情報技術者試験</div>
         <div class="console_text">趣味：コーディング, 写真撮影, ゲーム, 映画鑑賞</div>
         <div class="console_text"></div>
         <div class="console_text">連絡先：b1013068@fun.ac.jp または iwami@pblsummit.jp</div>
